# DigitalTwin

./: .env  .gitignore  NOTICE  README.md  UV_MIGRATION.md  docker-compose.yml
gateway/: Cargo.toml  README.md  example.jsonld  gateway.toml
gateway/src/: main.rs
semantic-model/datamodel/tools/: .eslintrc.js  Makefile  getSubcomponents.js  jsonldConverter.js  jsonschema2owl.js  jsonschema2shacl.js  package-lock.json  package.json  pyproject.toml  validate.js
semantic-model/datamodel/tools/lib/: jsonldUtils.js  owlUtils.js  shaclUtils.js
semantic-model/datamodel/tools/tests/: context.jsonld  testJsonldUtils.js  testOwlUtils.js  testShaclUtils.js  validation3_data2.json  validation3_data3.json_result  validation3_data4.json
semantic-model/dataservice/: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  startDataservice.py
semantic-model/dataservice/examples/: bindings.ttl
semantic-model/dataservice/external_services/: opcuaConnector.py
semantic-model/dataservice/services/: testConnector.py
semantic-model/dataservice/tests/: test_startDataservice.py
semantic-model/dataservice/tests/server/: binding_server.py  nodeset_server.py
semantic-model/dataservice/validation/: bindings-validation-shacl.ttl
semantic-model/opcua/: .coveragerc  .flake8  Makefile  README.md  README_validation.md  base.ttl  extractIffBindings.py  extractType.py  nodeset-dump.py  nodeset2owl.py  pyproject.toml  requirements-dev.txt  requirements.txt  shacl_valuerank_constraints.ttl  start_fuseki.py  translate_default_nodesets.make  translate_default_specs.bash  translate_laserExample.make  translate_pumpExample.make  translate_simpleExample.make  translate_type_contracts.make  validate.py
semantic-model/opcua/IffMappingsCompanionSpec/: README.md  iffmapping.nodeset2.xml
semantic-model/opcua/IffMappingsCompanionSpec/example/: Makefile  company_iffbindings.nodeset2.xml  company_proprietarymodel.nodeset2.xml  company_standardmodel.nodeset2.xml  iff_instances.jsonld
semantic-model/opcua/docs/: README.md  building-companion-specifications.md  mapping-concept.md  overview.md  simple-example.md  tools.md
semantic-model/opcua/docs/files/: Example.NodeSet2.xml
semantic-model/opcua/lib/: bindings.py  entity.py  jsonld.py  nodesetparser.py  shacl.py  utils.py
semantic-model/opcua/tests/: test_libbindings.py  test_libentity.py  test_libjsonld.py  test_libnodesetparser.py  test_libshacl.py  test_libutils.py
semantic-model/opcua/tests/extractIffBindings/: Makefile  bindings_iffmodel.ttl_result  company_iffbindings.nodeset2.xml  company_proprietarymodel.nodeset2.xml  company_standardmodel.nodeset2.xml  iff_instances.jsonld  iffmapping.nodeset2.xml  test.bash
semantic-model/opcua/tests/extractType/: compare_graphs.py  context.jsonld.test  query.py  serve_context.py  test.bash  test_eid_switch.NodeSet2.instances  test_eid_switch.NodeSet2.shacl  test_eid_switch.NodeSet2.xml  test_full_id.Nodeset2.instances  test_full_id.Nodeset2.shacl  test_full_id.Nodeset2.xml  test_ignore_references.NodeSet2.instances  test_ignore_references.NodeSet2.shacl  test_ignore_references.NodeSet2.xml  test_interfaces.NodeSet2.context  test_interfaces.NodeSet2.instances  test_interfaces.NodeSet2.pyshacl  test_interfaces.NodeSet2.shacl  test_interfaces.NodeSet2.xml  test_minimal_object.NodeSet2.instances  test_minimal_object.NodeSet2.query1  test_minimal_object.NodeSet2.shacl  test_minimal_object.NodeSet2.xml  test_object_example.NodeSet2.instances  test_object_example.NodeSet2.shacl  test_object_example.NodeSet2.xml  test_object_foldertype.NodeSet2.instances  test_object_foldertype.NodeSet2.shacl  test_object_foldertype.NodeSet2.xml  test_object_foldertype_tree.NodeSet2.instances  test_object_foldertype_tree.NodeSet2.shacl  test_object_foldertype_tree.NodeSet2.xml  test_object_hierarchies_no_DataValue.instances  test_object_hierarchies_no_DataValue.shacl  test_object_hierarchies_no_DataValue.xml  test_object_overwrite_type.NodeSet2.instances  test_object_overwrite_type.NodeSet2.shacl  test_object_overwrite_type.NodeSet2.xml  test_object_subtypes.NodeSet2.instances  test_object_subtypes.NodeSet2.shacl  (+44 more)
semantic-model/opcua/tests/nodeset-dump/: opcua-server1.nodeset2.xml  opcua-server1.py  test.bash
semantic-model/opcua/tests/nodeset2owl/: cleangraph.py  test.bash  (+18 more)
semantic-model/shacl2flink/: .flake8  .snyk  Chart.yaml  Makefile  README.md  check_sparql_expression.py  create_core_tables.py  create_knowledge_closure.py  create_ngsild_models.py  create_ngsild_tables.py  create_rdf_table.py  create_sql_checks_from_shacl.py  create_udfs.py  pyenv_setup.sh  pyproject.toml  requirements-dev.txt  requirements.txt  shacl_normalization.py
semantic-model/shacl2flink/docs/: examples.md  supported-features.md
semantic-model/shacl2flink/lib/: bgp_translation_utils.py  configs.py  shacl_construct_to_sql.py  shacl_properties_to_sql.py  shacl_sparql_to_sql.py  sparql_to_sql.py  utils.py
semantic-model/shacl2flink/tests/: test_check_sparql_expression.py  test_create_core_tables.py  test_create_knowledge_closure.py  test_create_ngsild_models.py  test_create_ngsild_tables.py  test_create_rdf_table.py  test_create_sql_check_from_shacl.py  test_create_udfs.py  test_lib_bgp_translation_utils.py  test_lib_shacl_contruct_to_sql.py  test_lib_shacl_properties_to_sql.py  test_lib_shacl_sparql_to_sql.py  test_lib_sparql_to_sql.py  test_shacl_normalization.py  test_utils.py
semantic-model/shacl2flink/udf/: sqlite3_insert.py  sqlite3_select.py
(+900 files in other folders)
