[package]
name = "gateway-simulator"
version = "0.1.0"
authors = ["sysarcher <sysarcher@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.16.1"
rand = "0.8.4"
rdkafka = { version = "0.25", features = ["cmake-build"] }
env_logger = "0.9.0"

base64 = "0.13"
clap = "3.0.0-beta.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3.18"
libc = "0.2.108"
log = "0.4.0"
chrono = "0.4"
slab = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.5"
