[package]
name = "gateway-simulator"
version = "0.1.0"
authors = ["sysarcher <sysarcher@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.17.0"
rand = "0.8.5"
rdkafka = { version = "0.28", features = ["cmake-build"] }
env_logger = "0.9.1"

base64 = "0.20"
clap = { version = "4.0.11", features = ["derive"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3.25"
libc = "0.2.135"
log = "0.4.17"
chrono = "0.4"
slab = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.5"
