[project]
name = "dataservice"
version = "0.1.0"
description = "Digital Twin Scorpio dataservice"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdflib==6.2.0",
    "owlrl==6.0.2",
    "ruamel.yaml==0.17.21",
    "setuptools>=65.5.1",  # pinned by Snyk to avoid vulnerability
]

[project.optional-dependencies]
dev = [
    "flake8==5.0.4",
    "bandit==1.7.4",
    "black==22.8.0",
    "pytest==7.1.3",
    "pytest-cov==4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = ["*.py"]

[tool.uv]
dev-dependencies = [
    "flake8==5.0.4",
    "bandit==1.7.4",
    "black==22.8.0",
    "pytest==7.1.3",
    "pytest-cov==4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
