[project]
name = "shacl2flink"
version = "0.1.0"
description = "SHACL to Flink converter for Digital Twin Scorpio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdflib==7.1.1",
    "pyshacl==0.29.0",
    "ruamel.yaml==0.17.21",
    "click==8.1.3",
    "Jinja2==3.1.5",
    "setuptools>=65.5.1",  # pinned by Snyk to avoid vulnerability
    "apache-flink==1.17.2",
    "oxrdflib==0.4.0",
]

[project.optional-dependencies]
dev = [
    "flake8==5.0.4",
    "bandit==1.7.4",
    "black==24.3.0",
    "pytest==7.1.3",
    "pytest-cov==4.0.0",
    "munch==4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = ["*.py"]

[tool.uv]
dev-dependencies = [
    "flake8==5.0.4",
    "bandit==1.7.4", 
    "black==24.3.0",
    "pytest==7.1.3",
    "pytest-cov==4.0.0",
    "munch==4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov --cov-report=term-missing --cov-fail-under=80"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "venv", "__pycache__", ".git", ".tox", "dist", "build", "*.egg"]
