[project]
name = "datamodel-tools"
version = "0.1.0"
description = "Datamodel tools for Digital Twin Scorpio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyshacl",
    "rdflib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 88
target-version = ['py310']
